--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "author": "NguyenChanhBao",
-  "description": "https://youtube.com/@trungquandev",
+  "description": "",
   "engines": {
     "node": "18.16.0"
   },
